# readme-writer

./: .gitignore  CHANGELOG.md  README.md  llms-full.txt  llms.txt
skills/readme-writer/: SKILL.md  inspiration.md  pyproject.toml
skills/readme-writer/fixtures/: sample_clean.md  sample_issues.md
skills/readme-writer/scripts/: readme_lint.py
skills/readme-writer/tests/: test_readme_lint.py
