[project]
name = "readme-writer"
version = "0.1.0"
description = "Human-facing README structural linter (deterministic, structural-only). Semantic quality review is delegated to a holistic LLM pass per AKC ADR-0008 Code-LLM Layering (Agent Knowledge Cycle research line)."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--strict-markers"]
markers = [
  "unit: fast pure-python unit tests",
  "integration: CLI / end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
